--- a/.env.dist
+++ b/.env.dist
@@ -5,6 +5,7 @@ USER_PASSWORD=Password1
 WWW_USER_NAME=user_1
 WWW_USER_PASSWORD=Password1
 WEB_USER_GROUP=www-data
+WEB_PATH=/project/
 PATH_ROOT=.
 TIMEZONE=Asia/Tokyo
 CERTIFICATE_FILE=selfsign/Encrypted.crt
@@ -18,14 +19,14 @@ PHP5_VERSION=5.6
 PHP5_PORT_FPM=9001
 PHP5_PORT_XDEBUG=9991
 PHP5_PATH_ROOT=/usr/local/etc
-PHP5_VH_NAME=php5
+PHP5_VH_NAME=localhost-php5
 PHP5_NETWORK_IP=172.21.0.2
 
 PHP7_VERSION=7.4
 PHP7_PORT_FPM=9002
 PHP7_PORT_XDEBUG=9992
 PHP7_PATH_ROOT=/usr/local/etc
-PHP7_VH_NAME=php7
+PHP7_VH_NAME=localhost-php7
 PHP7_NETWORK_IP=172.21.0.3
 
 APACHE_VERSION=2.4
@@ -39,14 +40,14 @@ MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=Password1
 MYSQL_USER=user_1
 MYSQL_PASSWORD=Password1
-MYSQL_DATA_PATH=/home/mysql_data
+MYSQL_DATA_PATH=/home/one_workspace_data/mysql
 MYSQL_NETWORK_IP=172.21.0.5
 
 POSTGRES_VERSION=10.13
 POSTGRES_PORT=5432
-POSTGRES_USER=user_1
+POSTGRES_USER=root
 POSTGRES_PASSWORD=Password1
-POSTGRES_DATA_PATH=/home/postgresql_data
+POSTGRES_DATA_PATH=/home/one_workspace_data/postgresql
 POSTGRES_NETWORK_IP=172.21.0.6
 
 NODEJS_VERSION=12.18.1
@@ -56,6 +57,5 @@ NODEJS_PORT_HTTP=1080
 NODEJS_PORT_HTTPS=1443
 NODEJS_DIGEST_ENABLE=false
 NODEJS_NETWORK_IP=172.21.0.7
-NODEJS_PORT_VUE=8000
-NODEJS_PORT_VUE_APP=8181
-NODEJS_VUE_DATA_PATH=/home/nodejs_vue_data
+NODEJS_VUE_PORT=8000
+NODEJS_VUE_APP_PORT=8181
