--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
         WWW_USER_NAME: ${WWW_USER_NAME}
         WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
         WEB_USER_GROUP: ${WEB_USER_GROUP}
+        WEB_PATH: ${WEB_PATH}
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         PHP5_VERSION: ${PHP5_VERSION}
@@ -24,6 +25,7 @@ services:
       WWW_USER_NAME: ${WWW_USER_NAME}
       WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
       WEB_USER_GROUP: ${WEB_USER_GROUP}
+      WEB_PATH: ${WEB_PATH}
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       PHP5_VERSION: ${PHP5_VERSION}
@@ -50,6 +52,7 @@ services:
         WWW_USER_NAME: ${WWW_USER_NAME}
         WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
         WEB_USER_GROUP: ${WEB_USER_GROUP}
+        WEB_PATH: ${WEB_PATH}
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         PHP7_VERSION: ${PHP7_VERSION}
@@ -63,6 +66,7 @@ services:
       WWW_USER_NAME: ${WWW_USER_NAME}
       WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
       WEB_USER_GROUP: ${WEB_USER_GROUP}
+      WEB_PATH: ${WEB_PATH}
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       PHP7_VERSION: ${PHP7_VERSION}
@@ -87,6 +91,7 @@ services:
         WWW_USER_NAME: ${WWW_USER_NAME}
         WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
         WEB_USER_GROUP: ${WEB_USER_GROUP}
+        WEB_PATH: ${WEB_PATH}
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         CERTIFICATE_FILE: ${CERTIFICATE_FILE}
@@ -105,6 +110,7 @@ services:
       WWW_USER_NAME: ${WWW_USER_NAME}
       WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
       WEB_USER_GROUP: ${WEB_USER_GROUP}
+      WEB_PATH: ${WEB_PATH}
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       CERTIFICATE_FILE: ${CERTIFICATE_FILE}
@@ -140,6 +146,7 @@ services:
         WWW_USER_NAME: ${WWW_USER_NAME}
         WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
         WEB_USER_GROUP: ${WEB_USER_GROUP}
+        WEB_PATH: ${WEB_PATH}
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         MYSQL_VERSION: ${MYSQL_VERSION}
@@ -151,6 +158,7 @@ services:
       WWW_USER_NAME: ${WWW_USER_NAME}
       WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
       WEB_USER_GROUP: ${WEB_USER_GROUP}
+      WEB_PATH: ${WEB_PATH}
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       MYSQL_VERSION: ${MYSQL_VERSION}
@@ -177,6 +185,7 @@ services:
         WWW_USER_NAME: ${WWW_USER_NAME}
         WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
         WEB_USER_GROUP: ${WEB_USER_GROUP}
+        WEB_PATH: ${WEB_PATH}
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         POSTGRES_VERSION: ${POSTGRES_VERSION}
@@ -187,6 +196,7 @@ services:
       WWW_USER_NAME: ${WWW_USER_NAME}
       WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
       WEB_USER_GROUP: ${WEB_USER_GROUP}
+      WEB_PATH: ${WEB_PATH}
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       POSTGRES_VERSION: ${POSTGRES_VERSION}
@@ -210,6 +220,7 @@ services:
       dockerfile: Dockerfile_nodejs
       args:
         WWW_USER_NAME: ${WWW_USER_NAME}
+        WEB_PATH: ${WEB_PATH}
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         CERTIFICATE_FILE: ${CERTIFICATE_FILE}
@@ -221,10 +232,11 @@ services:
         NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
         NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
         NODEJS_DIGEST_ENABLE: ${NODEJS_DIGEST_ENABLE}
-        NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
-        NODEJS_PORT_VUE_APP: ${NODEJS_PORT_VUE_APP}
+        NODEJS_VUE_PORT: ${NODEJS_VUE_PORT}
+        NODEJS_VUE_APP_PORT: ${NODEJS_VUE_APP_PORT}
     environment:
       WWW_USER_NAME: ${WWW_USER_NAME}
+      WEB_PATH: ${WEB_PATH}
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       CERTIFICATE_FILE: ${CERTIFICATE_FILE}
@@ -236,16 +248,15 @@ services:
       NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
       NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
       NODEJS_DIGEST_ENABLE: ${NODEJS_DIGEST_ENABLE}
-      NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
-      NODEJS_PORT_VUE_APP: ${NODEJS_PORT_VUE_APP}
+      NODEJS_VUE_PORT: ${NODEJS_VUE_PORT}
+      NODEJS_VUE_APP_PORT: ${NODEJS_VUE_APP_PORT}
     ports:
       - 127.0.0.1:${NODEJS_PORT_HTTP}:${NODEJS_PORT_HTTP}
       - 127.0.0.1:${NODEJS_PORT_HTTPS}:${NODEJS_PORT_HTTPS}
-      - 127.0.0.1:${NODEJS_PORT_VUE}:${NODEJS_PORT_VUE}
-      - 127.0.0.1:${NODEJS_PORT_VUE_APP}:${NODEJS_PORT_VUE_APP}
+      - 127.0.0.1:${NODEJS_VUE_PORT}:${NODEJS_VUE_PORT}
+      - 127.0.0.1:${NODEJS_VUE_APP_PORT}:${NODEJS_VUE_APP_PORT}
     volumes:
       - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
-      - ${NODEJS_VUE_DATA_PATH}:/home/${WWW_USER_NAME}/root/ow_system/node_modules
     networks:
       default:
         ipv4_address: ${NODEJS_NETWORK_IP}
