--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -3,6 +3,7 @@ ARG NODEJS_VERSION
 FROM node:${NODEJS_VERSION}
 
 ARG WWW_USER_NAME
+ARG WEB_PATH
 ARG PATH_ROOT
 ARG TIMEZONE
 ARG CERTIFICATE_FILE
@@ -13,8 +14,8 @@ ARG NODEJS_SERVER_NAME
 ARG NODEJS_PORT_HTTP
 ARG NODEJS_PORT_HTTPS
 ARG NODEJS_DIGEST_ENABLE
-ARG NODEJS_PORT_VUE
-ARG NODEJS_PORT_VUE_APP
+ARG NODEJS_VUE_PORT
+ARG NODEJS_VUE_APP_PORT
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
@@ -59,4 +60,4 @@ wget \
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
-EXPOSE ${NODEJS_PORT_HTTP} ${NODEJS_PORT_HTTPS} ${NODEJS_PORT_VUE} ${NODEJS_PORT_VUE_APP}
+EXPOSE ${NODEJS_PORT_HTTP} ${NODEJS_PORT_HTTPS} ${NODEJS_VUE_PORT} ${NODEJS_VUE_APP_PORT}
