--- a/virtual_host/custom/example.conf
+++ b/virtual_host/custom/example.conf
@@ -3,10 +3,10 @@
     ServerName example
     ServerAlias example
 
-    DocumentRoot /home/${WWW_USER_NAME}/root
+    DocumentRoot /home/${WWW_USER_NAME}/root${WEB_PATH}
     DirectoryIndex index.php index.html
 
-    <Directory /home/${WWW_USER_NAME}/root>
+    <Directory /home/${WWW_USER_NAME}/root${WEB_PATH}>
         Options +FollowSymLinks -Indexes -Includes -ExecCGI
 
         AllowOverride all
@@ -15,6 +15,6 @@
     
     # Log
     LogLevel error
-    ErrorLog /home/${WWW_USER_NAME}/root/error.log
-    #CustomLog /home/${WWW_USER_NAME}/root/custom.log combined
+    ErrorLog /home/${WWW_USER_NAME}/root${WEB_PATH}error.log
+    #CustomLog /home/${WWW_USER_NAME}/root${WEB_PATH}custom.log combined
 </VirtualHost>
