--- a/virtual_host/localhost.conf
+++ b/virtual_host/localhost.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerAdmin cimo@localhost
+    ServerAdmin ${WWW_USER_NAME}@localhost
     ServerName localhost
     ServerAlias localhost
 
@@ -31,11 +31,11 @@
     </Directory>
 
     #<Location />
-    #   AuthType Digest
-    #   AuthName "Auth - Digest"
-    #   AuthDigestDomain /home/${WWW_USER_NAME}/root
-    #   AuthUserFile /home/${WWW_USER_NAME}/root/.digest_htpasswd
-    #   Require valid-user
+        #AuthType Digest
+        #AuthName "Auth - Digest"
+        #AuthDigestDomain /home/${WWW_USER_NAME}/root${WEB_PATH}
+        #AuthUserFile /home/${WWW_USER_NAME}/root${WEB_PATH}.digest_htpasswd
+        #Require valid-user
     #</Location>
 
     <IfModule mod_proxy.c>
@@ -65,14 +65,14 @@
 
     # Log
     LogLevel error
-    ErrorLog /home/${WWW_USER_NAME}/root/error.log
-    #CustomLog /home/${WWW_USER_NAME}/root/custom.log combined
+    ErrorLog /home/${WWW_USER_NAME}/root${WEB_PATH}error.log
+    #CustomLog /home/${WWW_USER_NAME}/root${WEB_PATH}custom.log combined
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerAdmin cimo@${PHP7_VH_NAME}
-    ServerName ${PHP7_VH_NAME}
-    ServerAlias ${PHP7_VH_NAME}
+    ServerAdmin ${WWW_USER_NAME}@localhost
+    ServerName localhost
+    ServerAlias localhost
 
     Protocols h2 h2c http/1.1
     H2Push on
@@ -104,11 +104,11 @@
     </Directory>
 
     #<Location />
-    #   AuthType Digest
-    #   AuthName "Auth - Digest"
-    #   AuthDigestDomain /home/${WWW_USER_NAME}/root
-    #   AuthUserFile /home/${WWW_USER_NAME}/root/.digest_htpasswd
-    #   Require valid-user
+        #AuthType Digest
+        #AuthName "Auth - Digest"
+        #AuthDigestDomain /home/${WWW_USER_NAME}/root${WEB_PATH}
+        #AuthUserFile /home/${WWW_USER_NAME}/root${WEB_PATH}.digest_htpasswd
+        #Require valid-user
     #</Location>
 
     <IfModule mod_proxy.c>
@@ -145,8 +145,8 @@
     # Log
     #LogLevel info mod_ssl.c:debug
     LogLevel error
-    ErrorLog /home/${WWW_USER_NAME}/root/error.log
-    #CustomLog /home/${WWW_USER_NAME}/root/custom.log combined
+    ErrorLog /home/${WWW_USER_NAME}/root${WEB_PATH}error.log
+    #CustomLog /home/${WWW_USER_NAME}/root${WEB_PATH}custom.log combined
 </VirtualHost>
 
 SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
