--- a/virtual_host/php7.conf
+++ b/virtual_host/php7.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerAdmin cimo@${PHP7_VH_NAME}
+    ServerAdmin ${WWW_USER_NAME}@${PHP7_VH_NAME}
     ServerName ${PHP7_VH_NAME}
     ServerAlias ${PHP7_VH_NAME}
 
@@ -16,7 +16,7 @@
     KeepAliveTimeout 100
     MaxKeepAliveRequests 200
 
-    DocumentRoot /home/${WWW_USER_NAME}/root
+    DocumentRoot /home/${WWW_USER_NAME}/root${WEB_PATH}
     DirectoryIndex index.php index.html
 
     <FilesMatch \.php$>
@@ -27,7 +27,7 @@
         Header set Cache-Control "max-age=31536000, public"
     </FilesMatch>
 
-    <Directory /home/${WWW_USER_NAME}/root>
+    <Directory /home/${WWW_USER_NAME}/root${WEB_PATH}>
         Options +FollowSymLinks -Indexes -Includes -ExecCGI
 
         AllowOverride all
@@ -35,11 +35,11 @@
     </Directory>
 
     #<Location />
-    #	AuthType Digest
-    #	AuthName "Auth - Digest"
-    #	AuthDigestDomain /home/${WWW_USER_NAME}/root
-    #	AuthUserFile /home/${WWW_USER_NAME}/root/.digest_htpasswd
-    #	Require valid-user
+        #AuthType Digest
+        #AuthName "Auth - Digest"
+        #AuthDigestDomain /home/${WWW_USER_NAME}/root${WEB_PATH}
+        #AuthUserFile /home/${WWW_USER_NAME}/root${WEB_PATH}.digest_htpasswd
+        #Require valid-user
     #</Location>
 
     <IfModule mod_proxy.c>
@@ -69,12 +69,12 @@
 
     # Log
     LogLevel error
-    ErrorLog /home/${WWW_USER_NAME}/root/error.log
-    #CustomLog /home/${WWW_USER_NAME}/root/custom.log combined
+    ErrorLog /home/${WWW_USER_NAME}/root${WEB_PATH}error.log
+    #CustomLog /home/${WWW_USER_NAME}/root${WEB_PATH}custom.log combined
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerAdmin cimo@${PHP7_VH_NAME}
+    ServerAdmin ${WWW_USER_NAME}@${PHP7_VH_NAME}
     ServerName ${PHP7_VH_NAME}
     ServerAlias ${PHP7_VH_NAME}
 
@@ -91,7 +91,7 @@
     KeepAliveTimeout 100
     MaxKeepAliveRequests 200
 
-    DocumentRoot /home/${WWW_USER_NAME}/root
+    DocumentRoot /home/${WWW_USER_NAME}/root${WEB_PATH}
     DirectoryIndex index.php index.html
 
     <FilesMatch \.php$>
@@ -102,7 +102,7 @@
         Header set Cache-Control "max-age=31536000, public"
     </FilesMatch>
 
-    <Directory /home/${WWW_USER_NAME}/root>
+    <Directory /home/${WWW_USER_NAME}/root${WEB_PATH}>
         SSLRequireSSL on
 
         Options +FollowSymLinks -Indexes -Includes -ExecCGI
@@ -112,11 +112,11 @@
     </Directory>
 
     #<Location />
-    #	AuthType Digest
-    #	AuthName "Auth - Digest"
-    #	AuthDigestDomain /home/${WWW_USER_NAME}/root
-    #	AuthUserFile /home/${WWW_USER_NAME}/root/.digest_htpasswd
-    #	Require valid-user
+        #AuthType Digest
+        #AuthName "Auth - Digest"
+        #AuthDigestDomain /home/${WWW_USER_NAME}/root${WEB_PATH}
+        #AuthUserFile /home/${WWW_USER_NAME}/root${WEB_PATH}.digest_htpasswd
+        #Require valid-user
     #</Location>
 
     <IfModule mod_proxy.c>
@@ -153,8 +153,8 @@
     # Log
     #LogLevel info mod_ssl.c:debug
     LogLevel error
-    ErrorLog /home/${WWW_USER_NAME}/root/error.log
-    #CustomLog /home/${WWW_USER_NAME}/root/custom.log combined
+    ErrorLog /home/${WWW_USER_NAME}/root${WEB_PATH}error.log
+    #CustomLog /home/${WWW_USER_NAME}/root${WEB_PATH}custom.log combined
 </VirtualHost>
 
 SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
