--- a/.gitignore
+++ b/.gitignore
@@ -57,13 +57,17 @@ _system/module/custom/*
 !_system/module/custom/.gitkeep
 _system/style/custom/*
 !_system/style/custom/.gitkeep
+nodejs/node_modules
 ow_system/node_modules
 project/*
-!project/.gitkeep
-nodejs/node_modules
+!project/.digest_htpasswd
+!project/favicon.ico
+!project/index.html
+!project/opcache.php
+!project/robots.txt
 virtual_host/custom/*
 !virtual_host/custom/.gitkeep
 !virtual_host/custom/example.conf
+.env
 error.log
 debug.log
-.env
