--- a/virtual_host/custom/example.conf
+++ b/virtual_host/custom/example.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerAdmin cimo@example
+    ServerAdmin ${WWW_USER_NAME}@example
     ServerName example
     ServerAlias example
 
