--- a/.env.dist
+++ b/.env.dist
@@ -16,6 +16,7 @@ NETWORK_DRIVER=bridge
 NETWORK_SUB=172.21.0.0/16
 
 PHP5_VERSION=5.6
+PHP5_SSH_PORT=31
 PHP5_PORT_FPM=9001
 PHP5_PORT_XDEBUG=9991
 PHP5_PATH_ROOT=/usr/local/etc
@@ -23,6 +24,7 @@ PHP5_VH_NAME=localhost-php5
 PHP5_NETWORK_IP=172.21.0.2
 
 PHP7_VERSION=7.4
+PHP7_SSH_PORT=32
 PHP7_PORT_FPM=9002
 PHP7_PORT_XDEBUG=9992
 PHP7_PATH_ROOT=/usr/local/etc
