--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         PHP5_VERSION: ${PHP5_VERSION}
+        PHP5_SSH_PORT: ${PHP5_SSH_PORT}
         PHP5_PORT_FPM: ${PHP5_PORT_FPM}
         PHP5_PORT_XDEBUG: ${PHP5_PORT_XDEBUG}
         PHP5_PATH_ROOT: ${PHP5_PATH_ROOT}
@@ -29,11 +30,13 @@ services:
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       PHP5_VERSION: ${PHP5_VERSION}
+      PHP5_SSH_PORT: ${PHP5_SSH_PORT}
       PHP5_PORT_FPM: ${PHP5_PORT_FPM}
       PHP5_PORT_XDEBUG: ${PHP5_PORT_XDEBUG}
       PHP5_PATH_ROOT: ${PHP5_PATH_ROOT}
       PHP5_VH_NAME: ${PHP5_VH_NAME}
     ports:
+      - 127.0.0.1:${PHP5_SSH_PORT}:22
       - 127.0.0.1:${PHP5_PORT_FPM}:${PHP5_PORT_FPM}
       - 127.0.0.1:${PHP5_PORT_XDEBUG}:${PHP5_PORT_XDEBUG}
     volumes:
@@ -56,6 +59,7 @@ services:
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         PHP7_VERSION: ${PHP7_VERSION}
+        PHP7_SSH_PORT: ${PHP7_SSH_PORT}
         PHP7_PORT_FPM: ${PHP7_PORT_FPM}
         PHP7_PORT_XDEBUG: ${PHP7_PORT_XDEBUG}
         PHP7_PATH_ROOT: ${PHP7_PATH_ROOT}
@@ -70,11 +74,13 @@ services:
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       PHP7_VERSION: ${PHP7_VERSION}
+      PHP7_SSH_PORT: ${PHP7_SSH_PORT}
       PHP7_PORT_FPM: ${PHP7_PORT_FPM}
       PHP7_PORT_XDEBUG: ${PHP7_PORT_XDEBUG}
       PHP7_PATH_ROOT: ${PHP7_PATH_ROOT}
       PHP7_VH_NAME: ${PHP7_VH_NAME}
     ports:
+      - 127.0.0.1:${PHP7_SSH_PORT}:22
       - 127.0.0.1:${PHP7_PORT_FPM}:${PHP7_PORT_FPM}
       - 127.0.0.1:${PHP7_PORT_XDEBUG}:${PHP7_PORT_XDEBUG}
     volumes:
