--- a/docker/Dockerfile_php5
+++ b/docker/Dockerfile_php5
@@ -10,6 +10,7 @@ ARG WEB_USER_GROUP
 ARG WEB_PATH
 ARG PATH_ROOT
 ARG TIMEZONE
+ARG PHP5_SSH_PORT
 ARG PHP5_PORT_FPM
 ARG PHP5_PORT_XDEBUG
 ARG PHP5_PATH_ROOT
@@ -18,15 +19,20 @@ ARG PHP5_VH_NAME
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
 
+COPY ${PATH_ROOT}/sshd_config /etc/ssh/sshd_config
+COPY ${PATH_ROOT}/key/id_rsa /tmp/key/id_rsa
+COPY ${PATH_ROOT}/key/authorized_keys /tmp/key/authorized_keys
 COPY ${PATH_ROOT}/zz-docker_php5.conf ${PHP5_PATH_ROOT}/php-fpm.d/zz-docker.conf
 COPY ${PATH_ROOT}/override.ini ${PHP5_PATH_ROOT}/php/conf.d/override.ini
 COPY ${PATH_ROOT}/entrypoint_php.sh /usr/local/bin/entrypoint.sh
 
 # System
 RUN cd ~ \
+&& mkdir -p /var/run/sshd \
 && chmod +x /usr/local/bin/entrypoint.sh \
 && cp ${PHP5_PATH_ROOT}/php/php.ini-production ${PHP5_PATH_ROOT}/php/php.ini \
 && apt-get update && apt-get install -y \
+openssh-server \
 sudo \
 nano \
 tzdata \
@@ -55,17 +61,35 @@ libmhash-dev \
 libmcrypt-dev \
 libmemcached-dev \
 zlib1g-dev \
+# Group
+&& addgroup sftp \
 # Time
 && ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
 && dpkg-reconfigure -f noninteractive tzdata \
 # User sudo
-&& useradd --home /home/${USER_NAME} -g sudo --shell /bin/bash -m ${USER_NAME} \
+&& useradd --home /home/${USER_NAME} -g sudo -G ${WEB_USER_GROUP} --shell /bin/bash -m ${USER_NAME} \
 && echo "${USER_NAME}:${USER_PASSWORD}" | chpasswd \
+&& mkdir /home/${USER_NAME}/.ssh \
+&& cp /tmp/key/id_rsa /home/${USER_NAME}/.ssh/id_rsa \
+&& cp /tmp/key/authorized_keys /home/${USER_NAME}/.ssh/authorized_keys \
+&& chmod 700 /home/${USER_NAME}/.ssh \
+&& chmod 600 /home/${USER_NAME}/.ssh/id_rsa \
+&& chmod 600 /home/${USER_NAME}/.ssh/authorized_keys \
+&& chown -R ${USER_NAME}:sudo /home/${USER_NAME}/.ssh \
+&& echo "${USER_NAME} ALL=(ALL:ALL) NOPASSWD: ALL" >> /etc/sudoers \
 # User www
-&& useradd --home /home/${WWW_USER_NAME} -g ${WEB_USER_GROUP} --shell /bin/false -m ${WWW_USER_NAME} \
+&& useradd --home /home/${WWW_USER_NAME} -g ${WEB_USER_GROUP} -G sftp --shell /bin/false -m ${WWW_USER_NAME} \
 && echo "${WWW_USER_NAME}:${WWW_USER_PASSWORD}" | chpasswd \
 && chown root:root /home/${WWW_USER_NAME} \
 && mkdir /home/${WWW_USER_NAME}/root \
+&& chown ${WWW_USER_NAME}:${WEB_USER_GROUP} /home/${WWW_USER_NAME}/root \
+&& mkdir /home/${WWW_USER_NAME}/.ssh \
+&& cp /tmp/key/id_rsa /home/${WWW_USER_NAME}/.ssh/id_rsa \
+&& cp /tmp/key/authorized_keys /home/${WWW_USER_NAME}/.ssh/authorized_keys \
+&& chmod 700 /home/${WWW_USER_NAME}/.ssh \
+&& chmod 600 /home/${WWW_USER_NAME}/.ssh/id_rsa \
+&& chmod 600 /home/${WWW_USER_NAME}/.ssh/authorized_keys \
+&& chown -R ${WWW_USER_NAME}:${WEB_USER_GROUP} /home/${WWW_USER_NAME}/.ssh \
 # Extension
 && ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/local/include/ \
 && pear config-set php_ini ${PHP5_PATH_ROOT}/php/php.ini \
@@ -98,7 +122,7 @@ opcache.fast_shutdown=1" >> ${PHP5_PATH_ROOT}/php/conf.d/override.ini \
 xdebug.remote_enable=on \n \
 xdebug.remote_handler=dbgp \n \
 xdebug.remote_mode=req \n \
-xdebug.remote_host=php_container \n \
+xdebug.remote_host=127.0.0.1 \n \
 xdebug.remote_port=${PHP5_PORT_XDEBUG} \n \
 xdebug.remote_log=/tmp/xdebug.log \n \
 xdebug.max_nesting_level=1000" >> ${PHP5_PATH_ROOT}/php/conf.d/override.ini \
@@ -107,10 +131,11 @@ xdebug.max_nesting_level=1000" >> ${PHP5_PATH_ROOT}/php/conf.d/override.ini \
 # Clean
 && pecl clear-cache \
 && rm -rf /var/lib/apt/lists/* \
+&& rm -rf /tmp/key \
 && apt-get clean -y \
 && apt-get autoclean -y \
 && apt-get autoremove -y
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
-EXPOSE ${PHP5_PORT_FPM} ${PHP5_PORT_XDEBUG}
+EXPOSE ${PHP5_SSH_PORT} ${PHP5_PORT_FPM} ${PHP5_PORT_XDEBUG}
