--- a/docker/Dockerfile_php5
+++ b/docker/Dockerfile_php5
@@ -107,6 +107,8 @@ zlib1g-dev \
 && docker-php-ext-install zip \
 && docker-php-ext-install pdo_mysql \
 && docker-php-ext-install pdo_pgsql \
+&& docker-php-ext-install mysql \
+&& docker-php-ext-install mysqli \
 && docker-php-ext-install bcmath \
 && docker-php-ext-install gmp \
 # Ini file setting
