--- a/.env.dist
+++ b/.env.dist
@@ -37,26 +37,28 @@ APACHE_PORT_HTTPS=443
 APACHE_PATH_ROOT=/usr/local/apache2
 APACHE_NETWORK_IP=172.21.0.4
 
-MYSQL_VERSION=5.7
-MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=Password1
 MYSQL_USER=user_1
 MYSQL_PASSWORD=Password1
-MYSQL_DATA_PATH=/home/one_workspace_data/mysql
-MYSQL_NETWORK_IP=172.21.0.5
+MYSQL56_PORT=3306
+MYSQL56_DATA_PATH=/home/one_workspace_data/mysql56
+MYSQL56_NETWORK_IP=172.21.0.5
+MYSQL57_PORT=3307
+MYSQL57_DATA_PATH=/home/one_workspace_data/mysql57
+MYSQL57_NETWORK_IP=172.21.0.6
 
 POSTGRES_VERSION=10.13
 POSTGRES_PORT=5432
 POSTGRES_USER=root
 POSTGRES_PASSWORD=Password1
 POSTGRES_DATA_PATH=/home/one_workspace_data/postgresql
-POSTGRES_NETWORK_IP=172.21.0.6
+POSTGRES_NETWORK_IP=172.21.0.7
 
 NODEJS_VERSION=12.18.1
 NODEJS_ENV=development
 NODEJS_PORT_HTTP=1080
 NODEJS_PORT_HTTPS=1443
 NODEJS_DIGEST_ENABLE=false
-NODEJS_NETWORK_IP=172.21.0.7
+NODEJS_NETWORK_IP=172.21.0.8
 NODEJS_VUE_PORT=8000
 NODEJS_VUE_APP_PORT=8181
