--- a/docker/Dockerfile_mysql56
+++ b/docker/Dockerfile_mysql56
@@ -1,6 +1,6 @@
 ARG MYSQL_VERSION
 
-FROM mysql:${MYSQL_VERSION}
+FROM mysql:5.6
 
 ARG WWW_USER_NAME
 ARG WWW_USER_PASSWORD
@@ -8,13 +8,15 @@ ARG WEB_USER_GROUP
 ARG WEB_PATH
 ARG PATH_ROOT
 ARG TIMEZONE
-ARG MYSQL_PORT
+ARG MYSQL56_PORT
 ARG MYSQL_ROOT_PASSWORD
 ARG MYSQL_USER
 ARG MYSQL_PASSWORD
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
+
+COPY ${PATH_ROOT}/mysql_override.cnf /etc/mysql/conf.d/override.cnf
 
 # System
 RUN cd ~ \
