--- a/docker/Dockerfile_php7
+++ b/docker/Dockerfile_php7
@@ -23,7 +23,7 @@ COPY ${PATH_ROOT}/sshd_config /etc/ssh/sshd_config
 COPY ${PATH_ROOT}/key/id_rsa /tmp/key/id_rsa
 COPY ${PATH_ROOT}/key/authorized_keys /tmp/key/authorized_keys
 COPY ${PATH_ROOT}/zz-docker_php7.conf ${PHP7_PATH_ROOT}/php-fpm.d/zz-docker.conf
-COPY ${PATH_ROOT}/override.ini ${PHP7_PATH_ROOT}/php/conf.d/override.ini
+COPY ${PATH_ROOT}/php_override.ini ${PHP7_PATH_ROOT}/php/conf.d/override.ini
 COPY ${PATH_ROOT}/entrypoint_php.sh /usr/local/bin/entrypoint.sh
 
 # System
