--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -25,6 +25,7 @@ COPY ${PATH_ROOT}/entrypoint_nodejs.sh /usr/local/bin/entrypoint.sh
 RUN cd ~ \
 && chmod +x /usr/local/bin/entrypoint.sh \
 && apt-get update && apt-get install -y \
+software-properties-common \
 sudo \
 nano \
 tzdata \
@@ -47,10 +48,10 @@ wget \
 && wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add \
 && echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list \
 && apt-get update \
-&& apt-get install -y google-chrome-stable=83.0.4103.116-1 firefox-esr=68.4.1esr-1~deb9u1 \
-&& npm install -g selenium-side-runner@3.17.0 --unsafe-perm=true --allow-root \
-&& npm install -g chromedriver@83.0.0 --unsafe-perm=true --allow-root \
-&& npm install -g geckodriver@1.19.1 --unsafe-perm=true --allow-root \
+&& apt-get install -y google-chrome-stable firefox-esr \
+&& npm install -g selenium-side-runner --unsafe-perm=true --allow-root \
+&& npm install -g chromedriver --unsafe-perm=true --allow-root \
+&& npm install -g geckodriver --unsafe-perm=true --allow-root \
 # Clean
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean -y \
