--- a/docker/Dockerfile_php7
+++ b/docker/Dockerfile_php7
@@ -32,7 +32,7 @@ RUN cd ~ \
 && chmod +x /usr/local/bin/entrypoint.sh \
 && cp ${PHP7_PATH_ROOT}/php/php.ini-production ${PHP7_PATH_ROOT}/php/php.ini \
 && apt-get update && apt-get install -y \
-openssh-server \
+software-properties-common \
 sudo \
 nano \
 tzdata \
@@ -43,6 +43,7 @@ zip \
 unzip \
 cron \
 wget \
+openssh-server \
 re2c \
 file \
 libfreetype6-dev \
