--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,11 +15,11 @@ services:
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         PHP5_VERSION: ${PHP5_VERSION}
-        PHP5_SSH_PORT: ${PHP5_SSH_PORT}
-        PHP5_PORT_FPM: ${PHP5_PORT_FPM}
-        PHP5_PORT_XDEBUG: ${PHP5_PORT_XDEBUG}
         PHP5_PATH_ROOT: ${PHP5_PATH_ROOT}
         PHP5_VH_NAME: ${PHP5_VH_NAME}
+        PHP5_PORT_SSH: ${PHP5_PORT_SSH}
+        PHP5_PORT_FPM: ${PHP5_PORT_FPM}
+        PHP5_PORT_XDEBUG: ${PHP5_PORT_XDEBUG}
     environment:
       USER_NAME: ${USER_NAME}
       USER_PASSWORD: ${USER_PASSWORD}
@@ -30,13 +30,13 @@ services:
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       PHP5_VERSION: ${PHP5_VERSION}
-      PHP5_SSH_PORT: ${PHP5_SSH_PORT}
-      PHP5_PORT_FPM: ${PHP5_PORT_FPM}
-      PHP5_PORT_XDEBUG: ${PHP5_PORT_XDEBUG}
       PHP5_PATH_ROOT: ${PHP5_PATH_ROOT}
       PHP5_VH_NAME: ${PHP5_VH_NAME}
+      PHP5_PORT_SSH: ${PHP5_PORT_SSH}
+      PHP5_PORT_FPM: ${PHP5_PORT_FPM}
+      PHP5_PORT_XDEBUG: ${PHP5_PORT_XDEBUG}
     ports:
-      - 127.0.0.1:${PHP5_SSH_PORT}:22
+      - 127.0.0.1:${PHP5_PORT_SSH}:22
       - 127.0.0.1:${PHP5_PORT_FPM}:${PHP5_PORT_FPM}
       - 127.0.0.1:${PHP5_PORT_XDEBUG}:${PHP5_PORT_XDEBUG}
     volumes:
@@ -59,11 +59,11 @@ services:
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         PHP7_VERSION: ${PHP7_VERSION}
-        PHP7_SSH_PORT: ${PHP7_SSH_PORT}
-        PHP7_PORT_FPM: ${PHP7_PORT_FPM}
-        PHP7_PORT_XDEBUG: ${PHP7_PORT_XDEBUG}
         PHP7_PATH_ROOT: ${PHP7_PATH_ROOT}
         PHP7_VH_NAME: ${PHP7_VH_NAME}
+        PHP7_PORT_SSH: ${PHP7_PORT_SSH}
+        PHP7_PORT_FPM: ${PHP7_PORT_FPM}
+        PHP7_PORT_XDEBUG: ${PHP7_PORT_XDEBUG}
     environment:
       USER_NAME: ${USER_NAME}
       USER_PASSWORD: ${USER_PASSWORD}
@@ -74,13 +74,13 @@ services:
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       PHP7_VERSION: ${PHP7_VERSION}
-      PHP7_SSH_PORT: ${PHP7_SSH_PORT}
-      PHP7_PORT_FPM: ${PHP7_PORT_FPM}
-      PHP7_PORT_XDEBUG: ${PHP7_PORT_XDEBUG}
       PHP7_PATH_ROOT: ${PHP7_PATH_ROOT}
       PHP7_VH_NAME: ${PHP7_VH_NAME}
+      PHP7_PORT_SSH: ${PHP7_PORT_SSH}
+      PHP7_PORT_FPM: ${PHP7_PORT_FPM}
+      PHP7_PORT_XDEBUG: ${PHP7_PORT_XDEBUG}
     ports:
-      - 127.0.0.1:${PHP7_SSH_PORT}:22
+      - 127.0.0.1:${PHP7_PORT_SSH}:22
       - 127.0.0.1:${PHP7_PORT_FPM}:${PHP7_PORT_FPM}
       - 127.0.0.1:${PHP7_PORT_XDEBUG}:${PHP7_PORT_XDEBUG}
     volumes:
@@ -105,13 +105,13 @@ services:
         CERTIFICATE_CHAIN: ${CERTIFICATE_CHAIN}
         DOMAIN: ${DOMAIN}
         APACHE_VERSION: ${APACHE_VERSION}
+        APACHE_PATH_ROOT: ${APACHE_PATH_ROOT}
         APACHE_PORT_HTTP: ${APACHE_PORT_HTTP}
         APACHE_PORT_HTTPS: ${APACHE_PORT_HTTPS}
-        APACHE_PATH_ROOT: ${APACHE_PATH_ROOT}
-        PHP5_PORT_FPM: ${PHP5_PORT_FPM}
         PHP5_VH_NAME: ${PHP5_VH_NAME}
-        PHP7_PORT_FPM: ${PHP7_PORT_FPM}
+        PHP5_PORT_FPM: ${PHP5_PORT_FPM}
         PHP7_VH_NAME: ${PHP7_VH_NAME}
+        PHP7_PORT_FPM: ${PHP7_PORT_FPM}
     environment:
       WWW_USER_NAME: ${WWW_USER_NAME}
       WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
@@ -124,13 +124,13 @@ services:
       CERTIFICATE_CHAIN: ${CERTIFICATE_CHAIN}
       DOMAIN: ${DOMAIN}
       APACHE_VERSION: ${APACHE_VERSION}
+      APACHE_PATH_ROOT: ${APACHE_PATH_ROOT}
       APACHE_PORT_HTTP: ${APACHE_PORT_HTTP}
       APACHE_PORT_HTTPS: ${APACHE_PORT_HTTPS}
-      APACHE_PATH_ROOT: ${APACHE_PATH_ROOT}
-      PHP5_PORT_FPM: ${PHP5_PORT_FPM}
       PHP5_VH_NAME: ${PHP5_VH_NAME}
-      PHP7_PORT_FPM: ${PHP7_PORT_FPM}
+      PHP5_PORT_FPM: ${PHP5_PORT_FPM}
       PHP7_VH_NAME: ${PHP7_VH_NAME}
+      PHP7_PORT_FPM: ${PHP7_PORT_FPM}
     ports:
       - 127.0.0.1:${APACHE_PORT_HTTP}:80
       - 127.0.0.1:${APACHE_PORT_HTTPS}:443
@@ -152,10 +152,10 @@ services:
         WEB_PATH: ${WEB_PATH}
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
-        MYSQL56_PORT: ${MYSQL56_PORT}
         MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
         MYSQL_USER: ${MYSQL_USER}
         MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+        MYSQL56_PORT: ${MYSQL56_PORT}
     environment:
       WWW_USER_NAME: ${WWW_USER_NAME}
       WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
@@ -163,10 +163,10 @@ services:
       WEB_PATH: ${WEB_PATH}
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
-      MYSQL56_PORT: ${MYSQL56_PORT}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL56_PORT: ${MYSQL56_PORT}
     ports:
       - 127.0.0.1:${MYSQL56_PORT}:3306
     volumes:
@@ -187,10 +187,10 @@ services:
         WEB_PATH: ${WEB_PATH}
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
-        MYSQL57_PORT: ${MYSQL57_PORT}
         MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
         MYSQL_USER: ${MYSQL_USER}
         MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+        MYSQL57_PORT: ${MYSQL57_PORT}
     environment:
       WWW_USER_NAME: ${WWW_USER_NAME}
       WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
@@ -198,10 +198,10 @@ services:
       WEB_PATH: ${WEB_PATH}
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
-      MYSQL57_PORT: ${MYSQL57_PORT}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL57_PORT: ${MYSQL57_PORT}
     ports:
       - 127.0.0.1:${MYSQL57_PORT}:3306
     volumes:
@@ -223,9 +223,9 @@ services:
         PATH_ROOT: ${PATH_ROOT}
         TIMEZONE: ${TIMEZONE}
         POSTGRES_VERSION: ${POSTGRES_VERSION}
-        POSTGRES_PORT: ${POSTGRES_PORT}
         POSTGRES_USER: ${POSTGRES_USER}
         POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+        POSTGRES_PORT: ${POSTGRES_PORT}
     environment:
       WWW_USER_NAME: ${WWW_USER_NAME}
       WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
@@ -234,9 +234,9 @@ services:
       PATH_ROOT: ${PATH_ROOT}
       TIMEZONE: ${TIMEZONE}
       POSTGRES_VERSION: ${POSTGRES_VERSION}
-      POSTGRES_PORT: ${POSTGRES_PORT}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_PORT: ${POSTGRES_PORT}
     ports:
       - 127.0.0.1:${POSTGRES_PORT}:5432
     volumes:
@@ -260,11 +260,11 @@ services:
         CERTIFICATE_CHAIN: ${CERTIFICATE_CHAIN}
         NODEJS_VERSION: ${NODEJS_VERSION}
         NODEJS_ENV: ${NODEJS_ENV}
+        NODEJS_DIGEST_ENABLE: ${NODEJS_DIGEST_ENABLE}
         NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
         NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
-        NODEJS_DIGEST_ENABLE: ${NODEJS_DIGEST_ENABLE}
-        NODEJS_VUE_PORT: ${NODEJS_VUE_PORT}
-        NODEJS_VUE_APP_PORT: ${NODEJS_VUE_APP_PORT}
+        NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
+        NODEJS_PORT_VUE_APP: ${NODEJS_PORT_VUE_APP}
     environment:
       WWW_USER_NAME: ${WWW_USER_NAME}
       WEB_PATH: ${WEB_PATH}
@@ -275,16 +275,16 @@ services:
       CERTIFICATE_CHAIN: ${CERTIFICATE_CHAIN}
       NODEJS_VERSION: ${NODEJS_VERSION}
       NODEJS_ENV: ${NODEJS_ENV}
+      NODEJS_DIGEST_ENABLE: ${NODEJS_DIGEST_ENABLE}
       NODEJS_PORT_HTTP: ${NODEJS_PORT_HTTP}
       NODEJS_PORT_HTTPS: ${NODEJS_PORT_HTTPS}
-      NODEJS_DIGEST_ENABLE: ${NODEJS_DIGEST_ENABLE}
-      NODEJS_VUE_PORT: ${NODEJS_VUE_PORT}
-      NODEJS_VUE_APP_PORT: ${NODEJS_VUE_APP_PORT}
+      NODEJS_PORT_VUE: ${NODEJS_PORT_VUE}
+      NODEJS_PORT_VUE_APP: ${NODEJS_PORT_VUE_APP}
     ports:
       - 127.0.0.1:${NODEJS_PORT_HTTP}:${NODEJS_PORT_HTTP}
       - 127.0.0.1:${NODEJS_PORT_HTTPS}:${NODEJS_PORT_HTTPS}
-      - 127.0.0.1:${NODEJS_VUE_PORT}:${NODEJS_VUE_PORT}
-      - 127.0.0.1:${NODEJS_VUE_APP_PORT}:${NODEJS_VUE_APP_PORT}
+      - 127.0.0.1:${NODEJS_PORT_VUE}:${NODEJS_PORT_VUE}
+      - 127.0.0.1:${NODEJS_PORT_VUE_APP}:${NODEJS_PORT_VUE_APP}
     volumes:
       - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
     networks:
