--- a/docker/Dockerfile_php7
+++ b/docker/Dockerfile_php7
@@ -10,11 +10,11 @@ ARG WEB_USER_GROUP
 ARG WEB_PATH
 ARG PATH_ROOT
 ARG TIMEZONE
-ARG PHP7_SSH_PORT
-ARG PHP7_PORT_FPM
-ARG PHP7_PORT_XDEBUG
 ARG PHP7_PATH_ROOT
 ARG PHP7_VH_NAME
+ARG PHP7_PORT_SSH
+ARG PHP7_PORT_FPM
+ARG PHP7_PORT_XDEBUG
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
@@ -139,4 +139,4 @@ xdebug.max_nesting_level=1000" >> ${PHP7_PATH_ROOT}/php/conf.d/override.ini \
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
-EXPOSE ${PHP7_SSH_PORT} ${PHP7_PORT_FPM} ${PHP7_PORT_XDEBUG}
+EXPOSE ${PHP7_PORT_SSH} ${PHP7_PORT_FPM} ${PHP7_PORT_XDEBUG}
