--- a/.env.dist
+++ b/.env.dist
@@ -16,49 +16,49 @@ NETWORK_DRIVER=bridge
 NETWORK_SUB=172.21.0.0/16
 
 PHP5_VERSION=5.6
-PHP5_SSH_PORT=31
-PHP5_PORT_FPM=9001
-PHP5_PORT_XDEBUG=9991
 PHP5_PATH_ROOT=/usr/local/etc
 PHP5_VH_NAME=localhost-php5
+PHP5_PORT_SSH=31
+PHP5_PORT_FPM=9001
+PHP5_PORT_XDEBUG=9991
 PHP5_NETWORK_IP=172.21.0.2
 
 PHP7_VERSION=7.4
-PHP7_SSH_PORT=32
-PHP7_PORT_FPM=9002
-PHP7_PORT_XDEBUG=9992
 PHP7_PATH_ROOT=/usr/local/etc
 PHP7_VH_NAME=localhost-php7
+PHP7_PORT_SSH=32
+PHP7_PORT_FPM=9002
+PHP7_PORT_XDEBUG=9992
 PHP7_NETWORK_IP=172.21.0.3
 
 APACHE_VERSION=2.4
+APACHE_PATH_ROOT=/usr/local/apache2
 APACHE_PORT_HTTP=80
 APACHE_PORT_HTTPS=443
-APACHE_PATH_ROOT=/usr/local/apache2
 APACHE_NETWORK_IP=172.21.0.4
 
 MYSQL_ROOT_PASSWORD=Password1
 MYSQL_USER=user_1
 MYSQL_PASSWORD=Password1
-MYSQL56_PORT=3306
 MYSQL56_DATA_PATH=/home/one_workspace_data/mysql56
+MYSQL56_PORT=3306
 MYSQL56_NETWORK_IP=172.21.0.5
-MYSQL57_PORT=3307
 MYSQL57_DATA_PATH=/home/one_workspace_data/mysql57
+MYSQL57_PORT=3307
 MYSQL57_NETWORK_IP=172.21.0.6
 
 POSTGRES_VERSION=10.13
-POSTGRES_PORT=5432
 POSTGRES_USER=root
 POSTGRES_PASSWORD=Password1
 POSTGRES_DATA_PATH=/home/one_workspace_data/postgresql
+POSTGRES_PORT=5432
 POSTGRES_NETWORK_IP=172.21.0.7
 
 NODEJS_VERSION=12.18.1
 NODEJS_ENV=development
+NODEJS_DIGEST_ENABLE=false
 NODEJS_PORT_HTTP=1080
 NODEJS_PORT_HTTPS=1443
-NODEJS_DIGEST_ENABLE=false
+NODEJS_PORT_VUE=8000
+NODEJS_PORT_VUE_APP=8181
 NODEJS_NETWORK_IP=172.21.0.8
-NODEJS_VUE_PORT=8000
-NODEJS_VUE_APP_PORT=8181
