--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -10,11 +10,11 @@ ARG CERTIFICATE_FILE
 ARG CERTIFICATE_KEY
 ARG CERTIFICATE_CHAIN
 ARG NODEJS_ENV
+ARG NODEJS_DIGEST_ENABLE
 ARG NODEJS_PORT_HTTP
 ARG NODEJS_PORT_HTTPS
-ARG NODEJS_DIGEST_ENABLE
-ARG NODEJS_VUE_PORT
-ARG NODEJS_VUE_APP_PORT
+ARG NODEJS_PORT_VUE
+ARG NODEJS_PORT_VUE_APP
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
@@ -60,4 +60,4 @@ wget \
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
-EXPOSE ${NODEJS_PORT_HTTP} ${NODEJS_PORT_HTTPS} ${NODEJS_VUE_PORT} ${NODEJS_VUE_APP_PORT}
+EXPOSE ${NODEJS_PORT_HTTP} ${NODEJS_PORT_HTTPS} ${NODEJS_PORT_VUE} ${NODEJS_PORT_VUE_APP}
