--- a/virtual_host/localhost.conf
+++ b/virtual_host/localhost.conf
@@ -27,6 +27,11 @@
         #Require valid-user
     #</Location>
 
+    #<Location /socket.io>
+        #Header always set Access-Control-Allow-Origin "http://localhost:${NODEJS_PORT_HTTP}"
+        #Header always set Access-Control-Allow-Credentials "true"
+    #</Location>
+
     <Directory /home/${WWW_USER_NAME}/root/ow_system/dist>
         Options +FollowSymLinks -Indexes -Includes -ExecCGI
 
@@ -92,6 +97,11 @@
         #AuthDigestDomain /home/${WWW_USER_NAME}/root${WEB_PATH}
         #AuthUserFile /home/${WWW_USER_NAME}/root${WEB_PATH}.digest_htpasswd
         #Require valid-user
+    #</Location>
+
+    #<Location /socket.io>
+        #Header always set Access-Control-Allow-Origin "https://localhost:${NODEJS_PORT_HTTPS}"
+        #Header always set Access-Control-Allow-Credentials "true"
     #</Location>
 
     <Directory /home/${WWW_USER_NAME}/root/ow_system/dist>
