--- a/docker/Dockerfile_apache
+++ b/docker/Dockerfile_apache
@@ -19,6 +19,8 @@ ARG PHP5_VH_NAME
 ARG PHP5_PORT_FPM
 ARG PHP7_VH_NAME
 ARG PHP7_PORT_FPM
+ARG NODEJS_PORT_HTTP
+ARG NODEJS_PORT_HTTPS
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
