--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -36,11 +36,14 @@ zip \
 unzip \
 cron \
 wget \
+# Docker
+&& wget -q https://download.docker.com/linux/static/stable/x86_64/docker-19.03.9.tgz \
+&& tar -xzvf docker-19.03.9.tgz -C /tmp \
+&& mv /tmp/docker/docker /usr/bin \
 # Time
 && ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
 && dpkg-reconfigure -f noninteractive tzdata \
 # Npm
-&& npm install -g pm2 \
 && npm install -g @vue/cli \
 && npm install -g terser \
 && npm install -g sass \
@@ -53,6 +56,8 @@ wget \
 && npm install -g chromedriver --unsafe-perm=true --allow-root \
 && npm install -g geckodriver --unsafe-perm=true --allow-root \
 # Clean
+&& rm docker-19.03.9.tgz \
+&& rm -rf /tmp/docker \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean -y \
 && apt-get autoclean -y \
