--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -14,6 +14,7 @@
         "cookie-parser": "1.4.5",
         "csurf": "1.11.0",
         "http-auth": "4.1.2",
+        "cors": "2.8.5",
         "socket.io": "2.3.0"
     },
     "peerDependencies": {}
