Container logic - Work in porgress.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,8 @@ services:
         PHP5_VH_NAME: ${PHP5_VH_NAME}
         PHP5_PORT_SSH: ${PHP5_PORT_SSH}
         PHP5_PORT_FPM: ${PHP5_PORT_FPM}
+        PHP5_KEY_XDEBUG: ${PHP5_KEY_XDEBUG}
+        PHP5_HOST_XDEBUG: ${PHP5_HOST_XDEBUG}
         PHP5_PORT_XDEBUG: ${PHP5_PORT_XDEBUG}
     environment:
       USER_NAME: ${USER_NAME}
@@ -34,11 +36,11 @@ services:
       PHP5_VH_NAME: ${PHP5_VH_NAME}
       PHP5_PORT_SSH: ${PHP5_PORT_SSH}
       PHP5_PORT_FPM: ${PHP5_PORT_FPM}
+      PHP5_KEY_XDEBUG: ${PHP5_KEY_XDEBUG}
+      PHP5_HOST_XDEBUG: ${PHP5_HOST_XDEBUG}
       PHP5_PORT_XDEBUG: ${PHP5_PORT_XDEBUG}
     ports:
       - 127.0.0.1:${PHP5_PORT_SSH}:22
-      - 127.0.0.1:${PHP5_PORT_FPM}:${PHP5_PORT_FPM}
-      - 127.0.0.1:${PHP5_PORT_XDEBUG}:${PHP5_PORT_XDEBUG}
     volumes:
       - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
     networks:
@@ -63,6 +65,8 @@ services:
         PHP7_VH_NAME: ${PHP7_VH_NAME}
         PHP7_PORT_SSH: ${PHP7_PORT_SSH}
         PHP7_PORT_FPM: ${PHP7_PORT_FPM}
+        PHP7_KEY_XDEBUG: ${PHP7_KEY_XDEBUG}
+        PHP7_HOST_XDEBUG: ${PHP7_HOST_XDEBUG}
         PHP7_PORT_XDEBUG: ${PHP7_PORT_XDEBUG}
     environment:
       USER_NAME: ${USER_NAME}
@@ -78,11 +82,11 @@ services:
       PHP7_VH_NAME: ${PHP7_VH_NAME}
       PHP7_PORT_SSH: ${PHP7_PORT_SSH}
       PHP7_PORT_FPM: ${PHP7_PORT_FPM}
+      PHP7_KEY_XDEBUG: ${PHP7_KEY_XDEBUG}
+      PHP7_HOST_XDEBUG: ${PHP7_HOST_XDEBUG}
       PHP7_PORT_XDEBUG: ${PHP7_PORT_XDEBUG}
     ports:
       - 127.0.0.1:${PHP7_PORT_SSH}:22
-      - 127.0.0.1:${PHP7_PORT_FPM}:${PHP7_PORT_FPM}
-      - 127.0.0.1:${PHP7_PORT_XDEBUG}:${PHP7_PORT_XDEBUG}
     volumes:
       - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
     networks:
