--- a/docker/Dockerfile_php5
+++ b/docker/Dockerfile_php5
@@ -14,6 +14,8 @@ ARG PHP5_PATH_ROOT
 ARG PHP5_VH_NAME
 ARG PHP5_PORT_SSH
 ARG PHP5_PORT_FPM
+ARG PHP5_KEY_XDEBUG
+ARG PHP5_HOST_XDEBUG
 ARG PHP5_PORT_XDEBUG
 
 ENV DEBIAN_FRONTEND=noninteractive
@@ -121,10 +123,10 @@ opcache.validate_timestamps=0 \n \
 opcache.interned_strings_buffer=16 \n \
 opcache.fast_shutdown=1" >> ${PHP5_PATH_ROOT}/php/conf.d/override.ini \
 && echo "\n \
-xdebug.remote_enable=on \n \
+xdebug.remote_enable=1 \n \
 xdebug.remote_handler=dbgp \n \
-xdebug.remote_mode=req \n \
-xdebug.remote_host=127.0.0.1 \n \
+xdebug.idekey=${PHP5_KEY_XDEBUG} \n \
+xdebug.remote_host=${PHP5_HOST_XDEBUG} \n \
 xdebug.remote_port=${PHP5_PORT_XDEBUG} \n \
 xdebug.remote_log=/tmp/xdebug.log \n \
 xdebug.max_nesting_level=1000" >> ${PHP5_PATH_ROOT}/php/conf.d/override.ini \
