Add new container.

--- a/docker/Dockerfile_mongodb
+++ b/docker/Dockerfile_mongodb
@@ -1,4 +1,6 @@
-FROM mysql:5.7
+ARG MONGODB_VERSION
+
+FROM mongo:${MONGODB_VERSION}
 
 ARG WWW_USER_NAME
 ARG WWW_USER_PASSWORD
@@ -6,15 +8,13 @@ ARG WEB_USER_GROUP
 ARG WEB_PATH
 ARG PATH_ROOT
 ARG TIMEZONE
-ARG MYSQL_ROOT_PASSWORD
-ARG MYSQL_USER
-ARG MYSQL_PASSWORD
-ARG MYSQL57_PORT
+ARG MONGODB_VERSION
+ARG MONGODB_USER
+ARG MONGODB_PASSWORD
+ARG MONGODB_PORT
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
-
-COPY ${PATH_ROOT}/mysql_override.cnf /etc/mysql/conf.d/override.cnf
 
 # System
 RUN cd ~ \
@@ -39,4 +39,4 @@ wget \
 && apt-get autoclean -y \
 && apt-get autoremove -y
 
-EXPOSE ${MYSQL_PORT}
+EXPOSE ${MONGODB_PORT}
