--- a/docker/Dockerfile_nodejs
+++ b/docker/Dockerfile_nodejs
@@ -16,6 +16,7 @@ ARG NODEJS_PORT_HTTPS
 ARG NODEJS_PORT_VUE
 ARG NODEJS_PORT_VUE_APP
 
+ENV NODE_ENV=${NODEJS_ENV}
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DEBCONF_NOWARNINGS=yes
 
