--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -327,6 +327,78 @@ services:
       options:
         max-size: ${LOG_MAX_SIZE}
         max-file: ${LOG_MAX_FILE}
+  redis_container:
+    container_name: Redis_${REDIS_VERSION}
+    build:
+      context: ${PATH_ROOT}/docker
+      dockerfile: Dockerfile_redis
+      args:
+        WWW_USER_NAME: ${WWW_USER_NAME}
+        WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
+        WEB_USER_GROUP: ${WEB_USER_GROUP}
+        WEB_PATH: ${WEB_PATH}
+        PATH_ROOT: ${PATH_ROOT}
+        TIMEZONE: ${TIMEZONE}
+        REDIS_VERSION: ${REDIS_VERSION}
+    environment:
+      WWW_USER_NAME: ${WWW_USER_NAME}
+      WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
+      WEB_USER_GROUP: ${WEB_USER_GROUP}
+      WEB_PATH: ${WEB_PATH}
+      PATH_ROOT: ${PATH_ROOT}
+      TIMEZONE: ${TIMEZONE}
+      REDIS_VERSION: ${REDIS_VERSION}
+    ports:
+      - 127.0.0.1:${REDIS_PORT}:6379
+    volumes:
+      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
+      - ${REDIS_DATA_PATH}:/data
+    networks:
+      default:
+        ipv4_address: ${REDIS_NETWORK_IP}
+    logging:
+      options:
+        max-size: ${LOG_MAX_SIZE}
+        max-file: ${LOG_MAX_FILE}
+  mongodb_container:
+    container_name: MongoDb_${MONGODB_VERSION}
+    build:
+      context: ${PATH_ROOT}/docker
+      dockerfile: Dockerfile_mongodb
+      args:
+        WWW_USER_NAME: ${WWW_USER_NAME}
+        WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
+        WEB_USER_GROUP: ${WEB_USER_GROUP}
+        WEB_PATH: ${WEB_PATH}
+        PATH_ROOT: ${PATH_ROOT}
+        TIMEZONE: ${TIMEZONE}
+        MONGODB_VERSION: ${MONGODB_VERSION}
+        MONGODB_USER: ${MONGODB_USER}
+        MONGODB_PASSWORD: ${MONGODB_PASSWORD}
+        MONGODB_PORT: ${MONGODB_PORT}
+    environment:
+      WWW_USER_NAME: ${WWW_USER_NAME}
+      WWW_USER_PASSWORD: ${WWW_USER_PASSWORD}
+      WEB_USER_GROUP: ${WEB_USER_GROUP}
+      WEB_PATH: ${WEB_PATH}
+      PATH_ROOT: ${PATH_ROOT}
+      TIMEZONE: ${TIMEZONE}
+      MONGODB_VERSION: ${MONGODB_VERSION}
+      MONGODB_USER: ${MONGODB_USER}
+      MONGODB_PASSWORD: ${MONGODB_PASSWORD}
+      MONGODB_PORT: ${MONGODB_PORT}
+    ports:
+      - 127.0.0.1:${MONGODB_PORT}:27017
+    volumes:
+      - ${PATH_ROOT}:/home/${WWW_USER_NAME}/root
+      - ${MONGODB_DATA_PATH}:/data/db
+    networks:
+      default:
+        ipv4_address: ${MONGODB_NETWORK_IP}
+    logging:
+      options:
+        max-size: ${LOG_MAX_SIZE}
+        max-file: ${LOG_MAX_FILE}
 networks:
   default:
     driver: ${NETWORK_DRIVER}
