--- a/virtual_host/localhost.conf
+++ b/virtual_host/localhost.conf
@@ -27,11 +27,6 @@
         #Require valid-user
     #</Location>
 
-    #<Location /socket.io>
-        #Header always set Access-Control-Allow-Origin "http://localhost:${NODEJS_PORT_HTTP}"
-        #Header always set Access-Control-Allow-Credentials "true"
-    #</Location>
-
     <Directory /home/${WWW_USER_NAME}/root/ow_system/dist>
         Options +FollowSymLinks -Indexes -Includes -ExecCGI
 
@@ -47,7 +42,7 @@
         RewriteEngine on
 
         # Redirect to https
-        RewriteRule ^(.*)$ https://%{HTTP_HOST}$1 [R=301,L]
+        #RewriteRule ^(.*)$ https://%{HTTP_HOST}$1 [R=301,L]
     </IfModule>
 
     <IfModule mod_headers.c>
@@ -97,11 +92,6 @@
         #AuthDigestDomain /home/${WWW_USER_NAME}/root${WEB_PATH}
         #AuthUserFile /home/${WWW_USER_NAME}/root${WEB_PATH}.digest_htpasswd
         #Require valid-user
-    #</Location>
-
-    #<Location /socket.io>
-        #Header always set Access-Control-Allow-Origin "https://localhost:${NODEJS_PORT_HTTPS}"
-        #Header always set Access-Control-Allow-Credentials "true"
     #</Location>
 
     <Directory /home/${WWW_USER_NAME}/root/ow_system/dist>
