--- a/docker/Dockerfile_php5
+++ b/docker/Dockerfile_php5
@@ -104,15 +104,7 @@ zlib1g-dev \
 && echo "\n" | pecl install memcached-2.2.0 \
 && docker-php-ext-configure gd --with-freetype-dir=/usr/include --with-jpeg-dir=/usr/include \
 && docker-php-ext-configure gmp \
-&& docker-php-ext-install gd \
-&& docker-php-ext-install intl \
-&& docker-php-ext-install opcache \
-&& docker-php-ext-install zip \
-&& docker-php-ext-install mysql \
-&& docker-php-ext-install pdo_mysql \
-&& docker-php-ext-install pdo_pgsql \
-&& docker-php-ext-install bcmath \
-&& docker-php-ext-install gmp \
+&& docker-php-ext-install gd intl opcache zip mysql pdo pdo_mysql pdo_pgsql bcmath gmp \
 # Composer
 && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
 # Clean
