add new parameter to environment

--- a/.env.dist
+++ b/.env.dist
@@ -68,3 +68,15 @@ NODEJS_PORT_HTTPS=1443
 NODEJS_PORT_VUE=8000
 NODEJS_PORT_VUE_APP=8001
 NODEJS_NETWORK_IP=172.21.0.8
+
+REDIS_VERSION=6.0.9
+REDIS_DATA_PATH=D:\One_workspace\data\redis
+REDIS_PORT=6379
+REDIS_NETWORK_IP=172.21.0.9
+
+MONGODB_VERSION=4.4.1
+MONGODB_USER=root
+MONGODB_PASSWORD=Password1
+MONGODB_DATA_PATH=D:\One_workspace\data\mongodb
+MONGODB_PORT=27017
+MONGODB_NETWORK_IP=172.21.0.10
